v1.2/README.md
### BHCexam  V1.2

> a LaTeX document class attempts to make it easy for even a LaTeX novice to prepare math exams.

This is version 1.2 of the BHCexam document class, dated March 09, 2020. 

This version is especially designed for the automatic math exams typesetting applications ( www.mathcrowd.cn ) developed by Charles Bao ( charles@mathcrowd.cn ).

Documentation of BHCexam has been moved [here](http://docs.mathcrowd.cn/zh_CN/latest/advances/bhcexam.html).



#### Change Log

##### version 1.2

* support mac font set
* use stix font for math (support math symbols like `\parallelogramblack`)
* fancy header height adjusted for qr code
* `\parallel` command rewritten
* support add parenthesis at the end of question.
* show author before notice in `\maketitle`



------

This work may be distributed and/or modified under the conditions of
the LaTeX Project Public License, either version 1.3 of this license
or (at your option) any later version.



