v1.3/README.md
### BHCexam  V1.3

> a LaTeX document class attempts to make it easy for even a LaTeX novice to prepare math exams.

This is version 1.3 of the BHCexam document class, dated March 30, 2020. 

This version is especially designed for the automatic math exams typesetting applications ( www.mathcrowd.cn ) developed by Charles Bao ( charles@mathcrowd.cn ).

Documentation of BHCexam has been moved [here](http://docs.mathcrowd.cn/advances/bhcexam.html).


#### Change Log

##### version 1.3

* add command ``\threechoices``, ``\sixchoices``
* rewrite ``groups`` environment and ``\group`` command to support list view.
* rewrite  ``\fourchoices``, ``fivechoices`` to fix overflow bug.

##### version 1.2

* support mac font set
* use stix font for math (support math symbols like ``\parallelogramblack``)
* fancy header height adjusted for qr code
* ``\parallel`` command rewritten
* support add parenthesis at the end of question.
* show author before notice in ``\maketitle``

------

This work may be distributed and/or modified under the conditions of
the LaTeX Project Public License, either version 1.3 of this license
or (at your option) any later version.



